@@ -1,5 +1,8 @@
 ChangeLog for ke_search_hooks
 
+Upcoming version
+[TASK]    Disable (not remove) the registration of the example custom filter renderer to keep the default renderer for select filters intact by default.
+
 Version 4.2.0, September 2022
 [FEATURE] Add example for hook modifyFieldValuesBeforeStoring, in this case index "keywords" of EXT:filemetadata
 [FEATURE] Add example for custom filter renderer
